--- a/tickets/templates/ticketDetails.html
+++ b/tickets/templates/ticketDetails.html
@@ -303,7 +303,6 @@
                                     <!-- Les en-têtes des jours seront générés par JavaScript -->
                                 </div>
                                 <div id="day-view" class="day-view hidden">
-                                    <div id="day-view-header" class="day-view-header">Jour</div>
                                     <div id="day-view-content" class="day-view-content">
                                         <!-- Le contenu de la vue journalière sera généré par JavaScript -->
                                     </div>
@@ -1046,15 +1045,7 @@
     width: 100%;
 }
 
-.day-view-header {
-    font-weight: 700;
-    font-size: 1.5rem;
-    color: var(--text-color-dark);
-    margin-bottom: 1.5rem;
-    text-align: center;
-    padding-bottom: 1rem;
-    border-bottom: 2px solid var(--border-color);
-}
+
 
 .day-view-content {
     display: grid;
@@ -1248,7 +1239,6 @@ document.addEventListener('DOMContentLoaded', function() {
   const nextMonthBtn = document.getElementById('nextMonthTicket');
   const backToMonthBtn = document.getElementById('back-to-month');
   const dayView = document.getElementById('day-view');
-  const dayViewHeader = document.getElementById('day-view-header');
   const dayViewContent = document.getElementById('day-view-content');
   
   let currentDate = new Date();
@@ -1469,9 +1459,9 @@ document.addEventListener('DOMContentLoaded', function() {
       addActivityBtn.style.display = 'none';
     }
     
-    // Mettre à jour l'en-tête de la vue journalière
+    // Mettre à jour l'en-tête du calendrier pour afficher le jour actuel
     const options = { weekday: 'long', day: 'numeric', month: 'long', year: 'numeric' };
-    dayViewHeader.textContent = date.toLocaleDateString('fr-FR', options);
+    monthYearDisplay.textContent = date.toLocaleDateString('fr-FR', options);
     
     // Effacer le contenu précédent de la vue journalière
     dayViewContent.innerHTML = '';
@@ -1545,6 +1535,10 @@ document.addEventListener('DOMContentLoaded', function() {
     if (addActivityBtn) {
       addActivityBtn.style.display = 'block';
     }
+    
+    // Remettre l'affichage du mois et de l'année dans l'en-tête
+    const monthNames = ['Janvier', 'Février', 'Mars', 'Avril', 'Mai', 'Juin', 'Juillet', 'Août', 'Septembre', 'Octobre', 'Novembre', 'Décembre'];
+    monthYearDisplay.textContent = `${monthNames[currentDate.getMonth()]} ${currentDate.getFullYear()}`;
   };
 
   // Navigation entre les mois/jours
